--- a/chapter-philosophical-issues.tex
+++ b/chapter-philosophical-issues.tex
@@ -243,7 +243,9 @@ Let us write $\H_{\CMS_0}^\infty$ their intersection, $\H_{\CMS_0}^{\infty \perp
 
 \paragraphtitle{Theorem} An initial mental state $\cms_i \in \CMS$ being given, for any initial quantum state $\ket \Psi \in \H_{\cms_i} \setminus \{0\}$, the probability that the mental state $\cms_i$ be experienced again in the future equals 1.
 
-\paragraphtitle{Proof of the lemma 1} For any $n \in \IN$, let us consider a quantum state $\ket \Psi \in \H_{\CMS_0}^n$ and a mental state $\cms \in \CMS$. We will show by recurrence on $n$ that $\op \Pi_\cms \ket \Psi$ belongs to $\H_{\CMS_0}^n$, too. If $\cms \in \CMS_0$, it is clear that $\op \Pi_\cms \ket \Psi$ belongs to $\H_{\CMS_0}^0$, because $\op \Pi_\cms$ is a projection operator on $\H_\cms$, which is a subspace of $\H_{\CMS_0} = \H_{\CMS_0}^0$. If $\cms \notin \CMS_0$, $\op \Pi_\cms \ket \Psi$ is zero since $\ket \Psi$ belongs to $\H_{\CMS_0}$ by hypothesis, which is orthogonal to $\H_\cms$. So in all cases, $\op \Pi_\cms \ket \Psi \in \H_{\CMS_0}^0$. Let us assume that the assertion holds for a given $n \in \IN$. To prove it at the next rang $n + 1$, it is sufficient to show that, for any mental states $\cms_0, \dotsc, \cms_n \in \CMS_0$, the quantum state $\op U_\tau \op \Pi_{\cms_n} \dotsm \op U_\tau \op \Pi_{\cms_0} \op \Pi_\cms \ket \Psi$ belongs to $\H_{\CMS_0}$. If $\cms_0 \neq \cms$, this quantum state is zero since $\op \Pi_{\cms_0}$ and $\op \Pi_\cms$ are orthogonal projection operators on two orthogonal subspaces $\H_{\cms_0}$ and $\H_\cms$. If $\cms_0 = \cms$, considering that, $\op \Pi_{\cms_0}$ being a projection operator, $\op \Pi_{\cms_0}^2 = \op \Pi_{\cms_0}$, this quantum state belongs to $\H_{\CMS_0}$ by hypothesis, which proves the assertion for all $n \in \IN$ by recurrence.
+\paragraphtitle{Proof of the lemma 1} For any $n \in \IN$, let us consider a quantum state $\ket \Psi \in \H_{\CMS_0}^n$ and a mental state $\cms \in \CMS$. We will show by recurrence on $n$ that $\op \Pi_\cms \ket \Psi$ belongs to $\H_{\CMS_0}^n$, too. If $\cms \in \CMS_0$, it is clear that $\op \Pi_\cms \ket \Psi$ belongs to $\H_{\CMS_0}^0$, because $\op \Pi_\cms$ is a projection operator on $\H_\cms$, which is a subspace of $\H_{\CMS_0} = \H_{\CMS_0}^0$. If $\cms \notin \CMS_0$, $\op \Pi_\cms \ket \Psi$ is zero since $\ket \Psi$ belongs to $\H_{\CMS_0}$ by hypothesis, which is orthogonal to $\H_\cms$. So in all cases, $\op \Pi_\cms \ket \Psi \in \H_{\CMS_0}^0$. Let us assume that the assertion holds for a given $n \in \IN$. To prove it at the next rang $n + 1$, it is sufficient to show that, for any mental states $\cms_0, \dotsc, \cms_n \in \CMS_0$, the quantum state $\op U_\tau \op \Pi_{\cms_n} \dotsm \op U_\tau \op \Pi_{\cms_0} \op \Pi_\cms \ket \Psi$ belongs to $\H_{\CMS_0}$. If $\cms_0 \neq \cms$, this quantum state is zero since $\op \Pi_{\cms_0}$ and $\op \Pi_\cms$ are orthogonal projection operators on two orthogonal subspaces $\H_{\cms_0}$ and $\H_\cms$. If $\cms_0 = \cms$, considering that, $\op \Pi_{\cms_0}$ being a projection operator, $\op \Pi_{\cms_0}^2 = \op \Pi_{\cms_0}$, this quantum state belongs to $\H_{\CMS_0}$ by hypothesis, which proves the assertion for all $n \in \IN$ by recurrence. We have therefore $\op \Pi_\cms \H_{\CMS_0}^n \subset \H_{\CMS_0}^n$ for any mental state $\cms \in \CMS$ and all $n \in \IN$.
+
+\paragraphtitle{§} One can see easily then that, for any mental state $\cms \in \CMS$, the projection $\op \Pi_\cms \H_{\CMS_0}^\infty$ of the subspace $\H_{\CMS_0}^\infty$ is included in $\H_{\CMS_0}^\infty$. Indeed, since $\H_{\CMS_0}^\infty$ is the intersection of the subspaces $\H_{\CMS_0}^n$, its image $\op \Pi_\cms \H_{\CMS_0}^\infty$ is included in the intersection of the images $\op \Pi_\cms \H_{\CMS_0}^n$, which are themselves included in the subspaces $\H_{\CMS_0}^n$, as we have just seen. Their intersection is therefore included in the intersection of the subspaces $\H_{\CMS_0}^n$, which is $\H_{\CMS_0}^\infty$. We have therefore $\op \Pi_\cms \H_{\CMS_0}^\infty \subset \H_{\CMS_0}^\infty$ for any mental state $\cms \in \CMS$.
 
 %TODO: Philosophical issues: Thought experiments
 %\chapter{Thought experiments}
