Reincarnation theorem: Next proof step

--- a/chapter-philosophical-issues.tex
+++ b/chapter-philosophical-issues.tex
@@ -247,6 +247,8 @@ Let us write $\H_{\CMS_0}^\infty$ their intersection, $\H_{\CMS_0}^{\infty \perp
 
 \paragraphtitle{§} One can see easily then that, for any mental state $\cms \in \CMS$, the projection $\op \Pi_\cms \H_{\CMS_0}^\infty$ of the subspace $\H_{\CMS_0}^\infty$ is included in $\H_{\CMS_0}^\infty$. Indeed, since $\H_{\CMS_0}^\infty$ is the intersection of the subspaces $\H_{\CMS_0}^n$, its image $\op \Pi_\cms \H_{\CMS_0}^\infty$ is included in the intersection of the images $\op \Pi_\cms \H_{\CMS_0}^n$, which are themselves included in the subspaces $\H_{\CMS_0}^n$, as we have just seen. Their intersection is therefore included in the intersection of the subspaces $\H_{\CMS_0}^n$, which is $\H_{\CMS_0}^\infty$. We have therefore $\op \Pi_\cms \H_{\CMS_0}^\infty \subset \H_{\CMS_0}^\infty$ for any mental state $\cms \in \CMS$.
 
+\paragraphtitle{§} This will allow us to prove that the subspace $\H_{\CMS_0}^\infty$ can be decomposed as the orthogonal sum of its projections $\op \Pi_\cms \H_{\CMS_0}^\infty$ for $\cms \in \CMS_0$. This sum is orthogonal since the projections are included in the orthogonal subspaces $\H_\cms$, respectively. It is obvious that $\H_{\CMS_0}^\infty$ is included in the sum, since any quantum state $\ket \Psi \in \H_{\CMS_0}^\infty$ belongs in particular to $\H_{\CMS_0}$, so that $\ket \Psi = \op \Pi_{\CMS_0} \ket \Psi = \sum_{\cms \in \CMS_0} \op \Pi_\cms \ket \Psi$. The inverse inclusion also holds since, as we have just seen, the projections are subspaces of $\H_{\CMS_0}^\infty$. We have therefore $\H_{\CMS_0}^\infty = \operp_{\cms \in \CMS_0} \op \Pi_\cms \H_{\CMS_0}^\infty$.
+
 %TODO: Philosophical issues: Thought experiments
 %\chapter{Thought experiments}
 
