Reincarnation theorem: Next proof step

--- a/chapter-philosophical-issues.tex
+++ b/chapter-philosophical-issues.tex
@@ -249,6 +249,8 @@ Let us write $\H_{\CMS_0}^\infty$ their intersection, $\H_{\CMS_0}^{\infty \perp
 
 \paragraphtitle{§} This will allow us to prove that the subspace $\H_{\CMS_0}^\infty$ can be decomposed as the orthogonal sum of its projections $\op \Pi_\cms \H_{\CMS_0}^\infty$ for $\cms \in \CMS_0$. This sum is orthogonal since the projections are included in the orthogonal subspaces $\H_\cms$, respectively. It is obvious that $\H_{\CMS_0}^\infty$ is included in the sum, since any quantum state $\ket \Psi \in \H_{\CMS_0}^\infty$ belongs in particular to $\H_{\CMS_0}$, so that $\ket \Psi = \op \Pi_{\CMS_0} \ket \Psi = \sum_{\cms \in \CMS_0} \op \Pi_\cms \ket \Psi$. The inverse inclusion also holds since, as we have just seen, the projections are subspaces of $\H_{\CMS_0}^\infty$. We have therefore $\H_{\CMS_0}^\infty = \operp_{\cms \in \CMS_0} \op \Pi_\cms \H_{\CMS_0}^\infty$.
 
+\paragraphtitle{§} We can conclude from this result that the subspace $\H_{\CMS_0}^{\infty \perp}$ can be decomposed too as the orthogonal sum of its projections $\op \Pi_\cms \H_{\CMS_0}^{\infty \perp}$ for $\cms \in \CMS_0$. Indeed, the subspace $\H_{\CMS_0}$ being the orthogonal sum of the mental subspaces $\H_\cms$ for $\cms \in \CMS_0$, and the orthogonal components $\op \Pi_\cms \H_{\CMS_0}^\infty$ of $\H_{\CMS_0}^\infty$ being respectively included in the mental subspaces $\H_\cms$, the supplemantary subspace of $\H_{\CMS_0}^\infty$ in $\H_{\CMS_0}$ can be decomposed as the orthogonal sum of the respective supplementary subspaces of $\op \Pi_\cms \H_{\CMS_0}^\infty$ in $\H_\cms$ -- which are therefore its respective projections on the mental subspaces $\H_\cms$. We have therefore $\H_{\CMS_0}^{\infty \perp} = \operp_{\cms \in \CMS_0} \op \Pi_\cms \H_{\CMS_0}^{\infty \perp}$.
+
 %TODO: Philosophical issues: Thought experiments
 %\chapter{Thought experiments}
 
