Reincarnation theorem: Next proof step

--- a/chapter-philosophical-issues.tex
+++ b/chapter-philosophical-issues.tex
@@ -237,7 +237,7 @@ Let us write $\H_{\CMS_0}^\infty$ their intersection, $\H_{\CMS_0}^{\infty \perp
 
 \paragraphtitle{Remarks} For any initial quantum state $\ket \Psi \neq 0$, $\bra \Psi \op P_{\CMS_0}^{(n)} \ket \Psi / \braket \Psi \Psi$ represents the probability that the experienced mental state belongs to $\CMS_0$ at all times $t = 0, \dotsc, n$. The operators $\op P_{\CMS_0}^{(n)}$ are hermitian and therefore diagonalizable on an orthogonal basis with real eigenvalues; these eigenvalues being probabilities, they lie between 0 and 1. The eigenspace for the eigenvalue 1 can be easily identified with $\H_{\CMS_0}^n$. The subspace $\H_{\CMS_0}^\infty$ is therefore the set of all initial quantum states for which the experienced mental state belongs with certainty to $\CMS_0$ at all times.
 
-\paragraphtitle{Lemma 1} For any mental state $\cms \in \CMS$ and any quantum state $\ket \Psi \in \H$ orthogonal to $\H_{\CMS_0}^\infty$, the quantum state $\op U_\tau \op \Pi_\cms \ket \Psi$ is orthogonal to $\H_{\CMS_0}^\infty$, too.
+\paragraphtitle{Lemma 1} For any mental state $\cms \in \CMS$ and any quantum state $\ket \Psi \in \H$ orthogonal to $\H_{\CMS_0}^\infty$, the quantum states $\op \Pi_\cms \ket \Psi$ and $\op U_\tau \op \Pi_\cms \ket \Psi$ are orthogonal to $\H_{\CMS_0}^\infty$, too.
 
 \paragraphtitle{Lemma 2} The sequence of operators $(\op P_{\CMS_0}^{(n)})$ converges towards $\op \Pi_{\H_{\CMS_0}^\infty}$.
 
@@ -250,6 +250,8 @@ Let us write $\H_{\CMS_0}^\infty$ their intersection, $\H_{\CMS_0}^{\infty \perp
 \paragraphtitle{§} This will allow us to prove that the subspace $\H_{\CMS_0}^\infty$ can be decomposed as the orthogonal sum of its projections $\op \Pi_\cms \H_{\CMS_0}^\infty$ for $\cms \in \CMS_0$. This sum is orthogonal since the projections are included in the orthogonal subspaces $\H_\cms$, respectively. It is obvious that $\H_{\CMS_0}^\infty$ is included in the sum, since any quantum state $\ket \Psi \in \H_{\CMS_0}^\infty$ belongs in particular to $\H_{\CMS_0}$, so that $\ket \Psi = \op \Pi_{\CMS_0} \ket \Psi = \sum_{\cms \in \CMS_0} \op \Pi_\cms \ket \Psi$. The inverse inclusion also holds since, as we have just seen, the projections are subspaces of $\H_{\CMS_0}^\infty$. We have therefore $\H_{\CMS_0}^\infty = \operp_{\cms \in \CMS_0} \op \Pi_\cms \H_{\CMS_0}^\infty$.
 
 \paragraphtitle{§} We can conclude from this result that the subspace $\H_{\CMS_0}^{\infty \perp}$ can be decomposed too as the orthogonal sum of its projections $\op \Pi_\cms \H_{\CMS_0}^{\infty \perp}$ for $\cms \in \CMS_0$. Indeed, the subspace $\H_{\CMS_0}$ being the orthogonal sum of the mental subspaces $\H_\cms$ for $\cms \in \CMS_0$, and the orthogonal components $\op \Pi_\cms \H_{\CMS_0}^\infty$ of $\H_{\CMS_0}^\infty$ being respectively included in the mental subspaces $\H_\cms$, the supplemantary subspace of $\H_{\CMS_0}^\infty$ in $\H_{\CMS_0}$ can be decomposed as the orthogonal sum of the respective supplementary subspaces of $\op \Pi_\cms \H_{\CMS_0}^\infty$ in $\H_\cms$ -- which are therefore its respective projections on the mental subspaces $\H_\cms$. We have therefore $\H_{\CMS_0}^{\infty \perp} = \operp_{\cms \in \CMS_0} \op \Pi_\cms \H_{\CMS_0}^{\infty \perp}$.
+
+\paragraphtitle{§} We can now prove the first part of the lemma: For any mental state $\cms \in \CMS$ and any quantum state $\ket \Psi \in \H$ orthogonal to $\H_{\CMS_0}^\infty$, the quantum state $\op \Pi_\cms \ket \Psi$ is orthogonal to $\H_{\CMS_0}^\infty$, too. Indeed, the supplementary subspace of $\H_{\CMS_0}^\infty$ is the orthogonal sum of its supplementary subspace in $\H_{\CMS_0}$, which is $\H_{\CMS_0}^{\infty \perp} = \operp_{\cms \in \CMS_0} \op \Pi_\cms \H_{\CMS_0}^{\infty \perp}$, and of the supplementary subspace of $\H_{\CMS_0}$ itself, which is $\operp_{\cms \in \CMS \setminus \CMS_0} \H_\cms$. So if $\cms \notin \CMS_0$, the quantum state $\op \Pi_\cms \ket \Psi$, which belongs to $\H_\cms$, is orthogonal to $\H_{\CMS_0}$, and if $\cms \in \CMS_0$, the quantum state $\op \Pi_\cms \ket \Psi$ belongs to $\op \Pi_\cms \H_{\CMS_0}^{\infty \perp}$, which is a subspace of $\H_{\CMS_0}^{\infty \perp}$ and is therefore orthogonal to $\H_{\CMS_0}^\infty$. In all cases, $\op \Pi_\cms \ket \Psi$ is orthogonal to $\H_{\CMS_0}^\infty$.
 
 %TODO: Philosophical issues: Thought experiments
 %\chapter{Thought experiments}
