Reincarnation theorem: Completed proof of the first lemma

--- a/chapter-philosophical-issues.tex
+++ b/chapter-philosophical-issues.tex
@@ -237,13 +237,17 @@ Let us write $\H_{\CMS_0}^\infty$ their intersection, $\H_{\CMS_0}^{\infty \perp
 
 \paragraphtitle{Remarks} For any initial quantum state $\ket \Psi \neq 0$, $\bra \Psi \op P_{\CMS_0}^{(n)} \ket \Psi / \braket \Psi \Psi$ represents the probability that the experienced mental state belongs to $\CMS_0$ at all times $t = 0, \dotsc, n$. The operators $\op P_{\CMS_0}^{(n)}$ are hermitian and therefore diagonalizable on an orthogonal basis with real eigenvalues; these eigenvalues being probabilities, they lie between 0 and 1. The eigenspace for the eigenvalue 1 can be easily identified with $\H_{\CMS_0}^n$. The subspace $\H_{\CMS_0}^\infty$ is therefore the set of all initial quantum states for which the experienced mental state belongs with certainty to $\CMS_0$ at all times.
 
-\paragraphtitle{Lemma 1} For any mental state $\cms \in \CMS$ and any quantum state $\ket \Psi \in \H$ orthogonal to $\H_{\CMS_0}^\infty$, the quantum states $\op \Pi_\cms \ket \Psi$ and $\op U_\tau \op \Pi_\cms \ket \Psi$ are orthogonal to $\H_{\CMS_0}^\infty$, too.
+\paragraphtitle{First lemma} For any quantum state $\ket \Psi \in \H$ orthogonal to $\H_{\CMS_0}^\infty$, and for all mental states $\cms \in \CMS$, the quantum states $\op U_\tau \ket \Psi$ and $\op \Pi_\cms \ket \Psi$ are orthogonal to $\H_{\CMS_0}^\infty$, too.
 
-\paragraphtitle{Lemma 2} The sequence of operators $(\op P_{\CMS_0}^{(n)})$ converges towards $\op \Pi_{\H_{\CMS_0}^\infty}$.
+\paragraphtitle{Second lemma} The sequence of operators $(\op P_{\CMS_0}^{(n)})$ converges towards $\op \Pi_{\H_{\CMS_0}^\infty}$.
 
 \paragraphtitle{Theorem} An initial mental state $\cms_i \in \CMS$ being given, for any initial quantum state $\ket \Psi \in \H_{\cms_i} \setminus \{0\}$, the probability that the mental state $\cms_i$ be experienced again in the future equals 1.
 
-\paragraphtitle{Proof of the lemma 1} For any $n \in \IN$, let us consider a quantum state $\ket \Psi \in \H_{\CMS_0}^n$ and a mental state $\cms \in \CMS$. We will show by recurrence on $n$ that $\op \Pi_\cms \ket \Psi$ belongs to $\H_{\CMS_0}^n$, too. If $\cms \in \CMS_0$, it is clear that $\op \Pi_\cms \ket \Psi$ belongs to $\H_{\CMS_0}^0$, because $\op \Pi_\cms$ is a projection operator on $\H_\cms$, which is a subspace of $\H_{\CMS_0} = \H_{\CMS_0}^0$. If $\cms \notin \CMS_0$, $\op \Pi_\cms \ket \Psi$ is zero since $\ket \Psi$ belongs to $\H_{\CMS_0}$ by hypothesis, which is orthogonal to $\H_\cms$. So in all cases, $\op \Pi_\cms \ket \Psi \in \H_{\CMS_0}^0$. Let us assume that the assertion holds for a given $n \in \IN$. To prove it at the next rang $n + 1$, it is sufficient to show that, for any mental states $\cms_0, \dotsc, \cms_n \in \CMS_0$, the quantum state $\op U_\tau \op \Pi_{\cms_n} \dotsm \op U_\tau \op \Pi_{\cms_0} \op \Pi_\cms \ket \Psi$ belongs to $\H_{\CMS_0}$. If $\cms_0 \neq \cms$, this quantum state is zero since $\op \Pi_{\cms_0}$ and $\op \Pi_\cms$ are orthogonal projection operators on two orthogonal subspaces $\H_{\cms_0}$ and $\H_\cms$. If $\cms_0 = \cms$, considering that, $\op \Pi_{\cms_0}$ being a projection operator, $\op \Pi_{\cms_0}^2 = \op \Pi_{\cms_0}$, this quantum state belongs to $\H_{\CMS_0}$ by hypothesis, which proves the assertion for all $n \in \IN$ by recurrence. We have therefore $\op \Pi_\cms \H_{\CMS_0}^n \subset \H_{\CMS_0}^n$ for any mental state $\cms \in \CMS$ and all $n \in \IN$.
+\paragraphtitle{Proof of the first lemma} Let us prove first that the subspace $\H_{\CMS_0}^\infty$ is identical to its image $\op U_\tau \H_{\CMS_0}^\infty$. It is easy to see that, for any $n \in \IN$, the subspace $\op U_\tau \H_{\CMS_0}^{1+n}$ is included in $\H_{\CMS_0}^n$. Indeed, any quantum state $\ket \Psi \in \H_{\CMS_0}^{1+n}$ belongs per definition to $\H_{\CMS_0}$ and verifies, for all mental states $\cms_0, \dotsc, \cms_n \in \CMS_0$ and for any $t \in \IntRange{1}{n}$, $\op U_\tau \op \Pi_{\cms_t} \dotsm \op U_\tau \op \Pi_{\cms_0} \ket \Psi \in \H_{\CMS_0}$. Summing up over all $\cms_0 \in \CMS_0$ yields $\op U_\tau \op \Pi_{\cms_t} \dotsm \op U_\tau \op \Pi_{\CMS_0} \ket \Psi \in \H_{\CMS_0}$ and, since $\ket \Psi \in \H_{\CMS_0}$, $\op U_\tau \op \Pi_{\cms_t} \dotsm \op U_\tau \ket \Psi \in \H_{\CMS_0}$. The quantum state $\op U_\tau \ket \Psi$ belongs also to $\H_{\CMS_0}^n$. We have therefore $\op U_\tau \H_{\CMS_0}^{1+n} \subset \H_{\CMS_0}^n$. Now $\H_{\CMS_0}^\infty$ is the intersection of all subspaces $\H_{\CMS_0}^n$ for $n \in \IN$, so its image $\op U_\tau \H_{\CMS_0}^\infty$ is included in the intersection of their images $\op U_\tau \H_{\CMS_0}^n$, and a fortiori in the intersection of the images $\op U_\tau \H_{\CMS_0}^{1+n}$, where $n \in \IN$. Since they are themselves included in $\H_{\CMS_0}^n$, we have $\op U_\tau \H_{\CMS_0}^\infty \subset \H_{\CMS_0}^\infty$. The subspace $\H_{\CMS_0}^\infty$ being finite dimensional and the endomorphism $\op U_\tau$ injective, we have also $\dim \op U_\tau \H_{\CMS_0}^\infty = \dim \H_{\CMS_0}^\infty$. We have therefore $\op U_\tau \H_{\CMS_0}^\infty = \H_{\CMS_0}^\infty$.
+
+\paragraphtitle{§} We can now prove the first part of the lemma: For any quantum state $\ket \Psi \in \H$ orthogonal to $\H_{\CMS_0}^\infty$, the quantum state $\op U_\tau \ket \Psi$ is orthogonal to $\H_{\CMS_0}^\infty$, too. Indeed, the elementary evolution operator $\op U_\tau$ being unitary, the quantum state $\op U_\tau \ket \Psi$ is orthogonal to $\op U_\tau \H_{\CMS_0}^\infty$, which is identical to $\H_{\CMS_0}^\infty$, as we have just seen.
+
+\paragraphtitle{§} Let us consider now, for any $n \in \IN$,  a quantum state $\ket \Psi \in \H_{\CMS_0}^n$ and a mental state $\cms \in \CMS$. We will show by recurrence on $n$ that $\op \Pi_\cms \ket \Psi$ belongs to $\H_{\CMS_0}^n$, too. If $\cms \in \CMS_0$, it is clear that $\op \Pi_\cms \ket \Psi$ belongs to $\H_{\CMS_0}^0$, because $\op \Pi_\cms$ is a projection operator on $\H_\cms$, which is a subspace of $\H_{\CMS_0} = \H_{\CMS_0}^0$. If $\cms \notin \CMS_0$, $\op \Pi_\cms \ket \Psi$ is zero since $\ket \Psi$ belongs to $\H_{\CMS_0}$ by hypothesis, which is orthogonal to $\H_\cms$. So in all cases, $\op \Pi_\cms \ket \Psi \in \H_{\CMS_0}^0$. Let us assume that the assertion holds for a given $n \in \IN$. To prove it at the next rang $n + 1$, it is sufficient to show that, for any mental states $\cms_0, \dotsc, \cms_n \in \CMS_0$, the quantum state $\op U_\tau \op \Pi_{\cms_n} \dotsm \op U_\tau \op \Pi_{\cms_0} \op \Pi_\cms \ket \Psi$ belongs to $\H_{\CMS_0}$. If $\cms_0 \neq \cms$, this quantum state is zero since $\op \Pi_{\cms_0}$ and $\op \Pi_\cms$ are orthogonal projection operators on two orthogonal subspaces $\H_{\cms_0}$ and $\H_\cms$. If $\cms_0 = \cms$, considering that, $\op \Pi_{\cms_0}$ being a projection operator, $\op \Pi_{\cms_0}^2 = \op \Pi_{\cms_0}$, this quantum state belongs to $\H_{\CMS_0}$ by hypothesis, which proves the assertion for all $n \in \IN$ by recurrence. We have therefore $\op \Pi_\cms \H_{\CMS_0}^n \subset \H_{\CMS_0}^n$ for any mental state $\cms \in \CMS$ and all $n \in \IN$.
 
 \paragraphtitle{§} One can see easily then that, for any mental state $\cms \in \CMS$, the projection $\op \Pi_\cms \H_{\CMS_0}^\infty$ of the subspace $\H_{\CMS_0}^\infty$ is included in $\H_{\CMS_0}^\infty$. Indeed, since $\H_{\CMS_0}^\infty$ is the intersection of the subspaces $\H_{\CMS_0}^n$, its image $\op \Pi_\cms \H_{\CMS_0}^\infty$ is included in the intersection of the images $\op \Pi_\cms \H_{\CMS_0}^n$, which are themselves included in the subspaces $\H_{\CMS_0}^n$, as we have just seen. Their intersection is therefore included in the intersection of the subspaces $\H_{\CMS_0}^n$, which is $\H_{\CMS_0}^\infty$. We have therefore $\op \Pi_\cms \H_{\CMS_0}^\infty \subset \H_{\CMS_0}^\infty$ for any mental state $\cms \in \CMS$.
 
@@ -251,7 +255,7 @@ Let us write $\H_{\CMS_0}^\infty$ their intersection, $\H_{\CMS_0}^{\infty \perp
 
 \paragraphtitle{§} We can conclude from this result that the subspace $\H_{\CMS_0}^{\infty \perp}$ can be decomposed too as the orthogonal sum of its projections $\op \Pi_\cms \H_{\CMS_0}^{\infty \perp}$ for $\cms \in \CMS_0$. Indeed, the subspace $\H_{\CMS_0}$ being the orthogonal sum of the mental subspaces $\H_\cms$ for $\cms \in \CMS_0$, and the orthogonal components $\op \Pi_\cms \H_{\CMS_0}^\infty$ of $\H_{\CMS_0}^\infty$ being respectively included in the mental subspaces $\H_\cms$, the supplemantary subspace of $\H_{\CMS_0}^\infty$ in $\H_{\CMS_0}$ can be decomposed as the orthogonal sum of the respective supplementary subspaces of $\op \Pi_\cms \H_{\CMS_0}^\infty$ in $\H_\cms$ -- which are therefore its respective projections on the mental subspaces $\H_\cms$. We have therefore $\H_{\CMS_0}^{\infty \perp} = \operp_{\cms \in \CMS_0} \op \Pi_\cms \H_{\CMS_0}^{\infty \perp}$.
 
-\paragraphtitle{§} We can now prove the first part of the lemma: For any mental state $\cms \in \CMS$ and any quantum state $\ket \Psi \in \H$ orthogonal to $\H_{\CMS_0}^\infty$, the quantum state $\op \Pi_\cms \ket \Psi$ is orthogonal to $\H_{\CMS_0}^\infty$, too. Indeed, the supplementary subspace of $\H_{\CMS_0}^\infty$ is the orthogonal sum of its supplementary subspace in $\H_{\CMS_0}$, which is $\H_{\CMS_0}^{\infty \perp} = \operp_{\cms \in \CMS_0} \op \Pi_\cms \H_{\CMS_0}^{\infty \perp}$, and of the supplementary subspace of $\H_{\CMS_0}$ itself, which is $\operp_{\cms \in \CMS \setminus \CMS_0} \H_\cms$. So if $\cms \notin \CMS_0$, the quantum state $\op \Pi_\cms \ket \Psi$, which belongs to $\H_\cms$, is orthogonal to $\H_{\CMS_0}$, and if $\cms \in \CMS_0$, the quantum state $\op \Pi_\cms \ket \Psi$ belongs to $\op \Pi_\cms \H_{\CMS_0}^{\infty \perp}$, which is a subspace of $\H_{\CMS_0}^{\infty \perp}$ and is therefore orthogonal to $\H_{\CMS_0}^\infty$. In all cases, $\op \Pi_\cms \ket \Psi$ is orthogonal to $\H_{\CMS_0}^\infty$.
+\paragraphtitle{§} We can now prove the second part of the lemma: For any quantum state $\ket \Psi \in \H$ orthogonal to $\H_{\CMS_0}^\infty$, and any mental state $\cms \in \CMS$, the quantum state $\op \Pi_\cms \ket \Psi$ is orthogonal to $\H_{\CMS_0}^\infty$, too. Indeed, the supplementary subspace of $\H_{\CMS_0}^\infty$ is the orthogonal sum of its supplementary subspace in $\H_{\CMS_0}$, which is $\H_{\CMS_0}^{\infty \perp} = \operp_{\cms \in \CMS_0} \op \Pi_\cms \H_{\CMS_0}^{\infty \perp}$, and of the supplementary subspace of $\H_{\CMS_0}$ itself, which is $\operp_{\cms \in \CMS \setminus \CMS_0} \H_\cms$. So if $\cms \notin \CMS_0$, the quantum state $\op \Pi_\cms \ket \Psi$, which belongs to $\H_\cms$, is orthogonal to $\H_{\CMS_0}$, and if $\cms \in \CMS_0$, the quantum state $\op \Pi_\cms \ket \Psi$ belongs to $\op \Pi_\cms \H_{\CMS_0}^{\infty \perp}$, which is a subspace of $\H_{\CMS_0}^{\infty \perp}$ and is therefore orthogonal to $\H_{\CMS_0}^\infty$. For any mental state $\cms \in \CMS$, the quantum state $\op \Pi_\cms \ket \Psi$ is therefore orthogonal to $\H_{\CMS_0}^\infty$, \textit{Q.~E.~D.}
 
 %TODO: Philosophical issues: Thought experiments
 %\chapter{Thought experiments}
